--- a/README
+++ b/README
@@ -1,3 +1,8 @@
-Starter Code from
+
+Starter Code for the Matrix Multiplication assignment
+
+Original code provided by Jim Demmel
+
 http://www.cs.berkeley.edu/~knight/cs267/hw1.html
-Provided by Jim Demmel
+
+with some modifications by Scott B. Baden at UC San Diego
